WKErrorGetErrorCode should not return the API::Error enum values directly https://bugs.webkit.org/show_bug.cgi?id=173367

Reviewed by Alex Christensen.

Even if the values are the same, we should use a switch to ensure we return the C API values, and not all
API::Error enum values are exposed in the C API.

* Shared/API/c/WKErrorRef.cpp:
(WKErrorGetErrorCode):

Canonical link: https://commits.webkit.org/190275@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218315 268f45cc-cd09-0410-ab3c-d52691b4dbfc